# CPU

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  next.md
books/algorithm-interview/: CMakeLists.txt  Makefile  README.md
books/algorithm-interview/labs/cpp20-examples/: CMakeLists.txt
books/algorithm-interview/labs/cpp20-examples/src/: array_patterns.cpp  backtracking_patterns.cpp  graph_patterns.cpp
books/algorithm-interview/labs/cpp20-examples/tests/: algorithm_book_tests.cpp
books/algorithm-interview/materials/: problem-map.md  writing-standard.md
books/algorithm-interview/reports/: weekly-report-template.md
books/algorithm-interview/source/latex/: Makefile  main.epub  main.tex
books/algorithm-interview/source/markdown/: main.md
books/algorithm-interview/tools/: check_book.py
books/compute-systems-engine-code/: CMakeLists.txt  Makefile  README.md
books/compute-systems-engine-code/labs/compute_systems/: CMakeLists.txt  README.md
books/compute-systems-engine-code/labs/reference_pipeline/: CMakeLists.txt  README.md
books/compute-systems-engine-code/source/latex/: Makefile  main.epub  main.tex
books/cpp-zero-to-advanced/: CMakeLists.txt  Makefile  README.md
books/cpp-zero-to-advanced/labs/cpp_practice_workbook/: CMakeLists.txt  README.md
books/cpp-zero-to-advanced/source/latex/: Makefile  main.epub  main.tex
books/cpu-volume-1/: CMakeLists.txt  Makefile  README.md
books/cpu-volume-1-practice/: CMakeLists.txt  Makefile  README.md
books/cpu-volume-1-practice/labs/executable_evidence/: CMakeLists.txt  README.md
books/cpu-volume-1-practice/source/latex/: Makefile  main.epub  main.tex
books/cpu-volume-1/labs/lab00_benchmark_foundation/: CMakeLists.txt  README.md
books/cpu-volume-1/materials/: x86_64_hpc_ai_16_week_bootcamp.md  x86_64_hpc_ai_detailed_curriculum.md  x86_64_hpc_ai_master_plan.md
books/cpu-volume-1/materials/drafts/: 00-preface.md  00a-program-to-process.md  00b-how-cpu-executes-instructions.md  00c-data-memory-pointers-layout.md  00d-x86-64-assembly-primer.md  01-measurement.md  02-cpp-to-binary.md  04-compiler-ir-optimization.md  05-microarchitecture-performance-model.md  07-cache-tlb-load-store-roofline.md  README.md  chapter-template.md  resources.md  writing-plan.md
books/cpu-volume-1/reports/: lab00.md
books/cpu-volume-1/source/latex/: Makefile  README.md  main.epub  main.tex
books/cpu-volume-1/tools/: env_report.sh  run_coverage.sh  summarize_bench_csv.py
books/cpu-volume-2/: CMakeLists.txt  Makefile  README.md
books/cpu-volume-2/labs/compute_systems/: CMakeLists.txt  README.md
books/cpu-volume-2/labs/linux_cpu_inference/: CMakeLists.txt  README.md
books/cpu-volume-2/materials/: csapp-gap-next-plan.md
books/cpu-volume-2/source/latex/: Makefile  README.md  main.epub  main.tex
books/cpu-volume-3/: CMakeLists.txt  README.md
books/cpu-volume-3-practice/: CMakeLists.txt  Makefile
books/cpu-volume-3-practice/source/latex/: Makefile  main.epub  main.tex
books/cpu-volume-3/labs/linux_cpu_inference/: CMakeLists.txt  README.md
books/cpu-volume-3/reports/: ai-infra-maturity-audit.md  lcqi-aarch64-neon-benchmark-2026-06-23.md  lcqi-gpt2-f32-dot-ab-caw.txt  lcqi-gpt2-f32-dot-hotspot-caw.txt  lcqi-gpt2-f32-dot-optimization-summary.md  lcqi-gpt2-f32-rowrange-ab-caw.txt  lcqi-gpt2-f32-rowrange-hotspot-caw.txt  lcqi-gpt2-f32-rowrange-optimization-summary.md  lcqi-gpt2-hotspot-profile-caw.txt  lcqi-gpt2-hotspot-profile-summary.md  lcqi-gpt2-optimization-ab-summary.md  lcqi-gpt2-packed-f32-ab-caw.txt  lcqi-gpt2-prefill-skip-ab-caw.txt  lcqi-gpt2-prefill-skip-optimization-summary.md  lcqi-gpt2-spinpool-ab-caw.txt  lcqi-gpt2-spinpool-optimization-summary.md  lcqi-gpt2-threaded-hotspot-caw.txt  lcqi-gpt2-threaded-manual-ab-caw.txt  lcqi-gpt2-threaded-optimization-summary.md  lcqi-smollm2-batch-prefill-compare-caw-3round.txt  lcqi-smollm2-batch-prefill-compare-caw.txt  lcqi-smollm2-batch-prefill-wide8-compare-caw.txt  lcqi-smollm2-batch-prefill-wide8-tail-compare-caw.txt  lcqi-smollm2-decode16-wide8-tail-compare-caw.txt  lcqi-smollm2-f32-row8-analysis.md  lcqi-smollm2-f32-row8-compare-caw.txt  lcqi-smollm2-ggml-direct-analysis.md  lcqi-smollm2-ggml-direct-compare-caw.txt  lcqi-smollm2-ggml-threaded-compare-caw.txt  lcqi-smollm2-gguf-reference-decode-summary.md  lcqi-smollm2-q4-direct-analysis.md  lcqi-smollm2-q4-direct-compare-caw.txt  lcqi-smollm2-q5-batch-group-local-smoke.txt  lcqi-smollm2-q5-q8-batch-prefill-local.txt  lcqi-smollm2-q5-sidecar-maxdot-compare-caw.txt  lcqi-smollm2-q5-sidecar-maxdot-decode16-compare-caw.txt  lcqi-smollm2-q6-q5-maxdot-compare-caw.txt  lcqi-smollm2-q6-q5-maxdot-decode16-compare-caw.txt  lcqi-smollm2-same-input-compare-analysis.md  lcqi-smollm2-same-input-compare-caw.txt  (+1 more)
books/cpu-volume-3/results/: lcqi-aarch64-neon-2026-06-23.csv  lcqi-aarch64-neon-2026-06-23.meta.txt  lcqi-aarch64-neon-decode4096-2026-06-23.csv  lcqi-aarch64-neon-decode4096-2026-06-23.meta.txt  lcqi-aarch64-neon-decode4096-2026-06-23.perf.txt  lcqi-gpt2-benchmark-compare.txt  lcqi-gpt2-smoke.txt  lcqi-neon-linear-i8-objdump-2026-06-23.txt  lcqi-onednn-f32-4096-2026-06-23.csv  lcqi-reference-trace-2026-06-23.csv  lcqi-serving-slo-probe-2026-06-24.csv  lcqi-sevenb-ledger-2026-06-24.csv  lcqi-smollm2-gguf-reference-decode-caw.txt  lcqi-smollm2-q4-k-benchmark.txt  lcqi-x86-avx2-benchmark-2026-06-25.csv  lcqi-x86-avx2-decode4096-2026-06-25.csv  lcqi-x86-avx2-linear-i8-objdump-2026-06-25.txt  lcqi-x86-avx2-perf-boundary-2026-06-25.txt
books/cpu-volume-3/source/latex/: Makefile  README.md  main.epub  main.tex
books/cpu-volume-3/tools/: run_gpt2_benchmark_compare.py  run_gpt2_hotspot_profile.py  run_gpt2_optimization_ab.py  run_gpt2_smoke.py  run_lcqi_benchmark.sh  run_smollm2_q4_k_benchmark.py  run_smollm2_same_input_compare.py  run_smollm2_small_smoke.py
labs/lab00_benchmark_foundation/: CMakeLists.txt  README.md
labs/lab00_benchmark_foundation/include/lab00/: kernels.hpp
labs/lab00_benchmark_foundation/scripts/: run_lab00.sh
labs/lab00_benchmark_foundation/src/: bad_benchmarks.cpp
(+686 files in other folders)
