cmake_minimum_required(VERSION 3.31)
project(CPUVolume2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(CPU_VOLUME_2_BUILD_LABS "Build CPU Volume 2 labs" ON)

if(CPU_VOLUME_2_BUILD_LABS)
    enable_testing()
endif()
